<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/cart_icon"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/emailEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#CB000000"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <EditText
        android:id="@+id/passwordEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#CB000000"
        app:layout_constraintTop_toBottomOf="@+id/emailEd"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="#0085F9"
        android:text="Sign In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEd" />

    <LinearLayout
        android:id="@+id/toSignUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account ? "
            android:textSize="17sp"
            android:textColorHint="#74000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColorHint="#000"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>