<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Activities.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        android:src="@drawable/camera_icon"
        app:civ_border_color="#707070"
        app:civ_border_width="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ProgressBar
        android:id="@+id/imageProgressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageIv"
        app:layout_constraintEnd_toEndOf="@+id/imageIv"
        app:layout_constraintStart_toStartOf="@+id/imageIv"
        app:layout_constraintTop_toTopOf="@+id/imageIv" />

    <EditText
        android:id="@+id/emailEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:nextFocusDown="@id/usernameEd"
        android:layout_marginEnd="20dp"
        android:textColor="#000"
        android:textColorHint="#66000000"
        app:layout_constraintTop_toBottomOf="@+id/imageIv"
        />


    <EditText
        android:id="@+id/usernameEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Username"
        android:inputType="text"
        android:nextFocusDown="@id/passwordEd"
        android:textColor="#000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#66000000"
        app:layout_constraintTop_toBottomOf="@+id/emailEd"
        />


    <EditText
        android:id="@+id/passwordEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#000"
        android:nextFocusDown="@id/passwordConfirmEd"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#66000000"
        app:layout_constraintTop_toBottomOf="@+id/usernameEd"
        />

    <EditText
        android:id="@+id/passwordConfirmEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColor="#000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#66000000"
        app:layout_constraintTop_toBottomOf="@+id/passwordEd"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="Sign Up"
        android:background="#0085F9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEd" />


    <LinearLayout
        android:id="@+id/toSigninLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account ? "
            android:textColorHint="#74000000"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColorHint="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>